--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
-    "gulp-plumber": "1.2.x",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "8.0.x",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.4.0",
