--- a/package.json
+++ b/package.json
@@ -6,25 +6,22 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
-    "browser-sync": "^2.26.5",
+    "browser-sync": "2.26.x",
     "del": "^4.1.1",
-    "editorconfig": "^0.15.3",
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
-    "gulp-plumber": "^1.2.1",
+    "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
     "gulp-posthtml": "^3.0.4",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "4.0.x",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
-    "gulp-uglyfly": "^1.4.2",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
-    "node-sass": "^4.12.0",
     "posthtml-include": "^1.2.0",
-    "run-sequence": "^2.2.1",
     "stylelint": "9.10.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
